--- a/exampleSite/config/_default/hugo.toml
+++ b/exampleSite/config/_default/hugo.toml
@@ -3,7 +3,7 @@ baseURL = "https://demo.gethugothemes.com/airspace/examplesite/"
 title = "Airspace | Creative Agency Hugo Template"
 theme = "airspace-hugo"
 # Default time zone for time stamps; use any valid tz database name: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
-timeZone = "America/New_York"
+timeZone = "Asia/Bangkok"
 # post pagination
 paginate = 6 # see https://gohugo.io/extras/pagination/
 # post excerpt
