--- a/exampleSite/config/_default/menus.en.toml
+++ b/exampleSite/config/_default/menus.en.toml
@@ -20,34 +20,11 @@ weight = 3
 name = "Blog"
 url = "blog/"
 weight = 4
-
-[[main]]
-weight = 5
-name = "More"
-hasChildren = true
-
-  [[main]]
-  parent = "More"
-  name = "Service"
-  url = "service/"
-  weight = 1
-
-  [[main]]
-  parent = "More"
-  name = "Pricing"
-  url = "pricing/"
-  weight = 2
-
-  [[main]]
-  parent = "More"
-  name = "FAQ"
-  url = "faq/"
-  weight = 3
   
 [[main]]
-name = "Contact"
+name = "Liên hệ"
 url = "contact/"
-weight = 6
+weight = 5
 
 
 # footer menu
